2006-07-27  Aaron Stone  <aaron@serendipity.cx>

	* debug.c:
	Added fflush after fprintf (closes bug #388).
	* modules/sortsieve.c:
	Make sure that the msgflags pointer is NULL if there are no special
	flags (closes bug #383).

2006-07-26  Paul J Stevens <paul@nfg.nl>

	* debian/control, modules/sortsieve.c:
	depend on libsieve1_2.1.12 and activate sort_getsubaddress callback in
	sieve code
	* INSTALL.exim, INSTALL.postfix, INSTALL.qmail, README.exim, 
	  README.postfix, README.qmail, debian/dbmail.docs:
	rename a couple of files
	* debian/changelog, debian/control, debian/dbmail.install, 
	  debian/libdbmail0.dirs, debian/libdbmail0.install:
	split out shared libs into separate packages
	* debian/control, debian/dbmail.postinst, debian/dbmail.postrm, 
	  debian/libdbmail0.postinst, debian/libdbmail0.postrm:
	update debian files
	* debian/dbmail.init:
	make debian initscript lsb compliant

2006-07-26  Aaron Stone  <aaron@serendipity.cx>

	* modules/sortsieve.c:
	Accepted patch from maenaka (closes bug #383) to clear the IMAP flags
	if none are given by the Sieve script.
	* db.c:
	Accepted patch from Leif Jackson to close a memory leak in
	db_imap_split_mailbox.

2006-07-25  Paul J Stevens <paul@nfg.nl>

	* misc.c:
	fix g_strcasestr
	* Makefile.am, check_dbmail_misc.c, misc.c:
	add check_dbmail_misc.c testsuite

2006-07-24  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	remove mailbox_search_parsed and friends
	* ChangeLog, Makefile.am, check_dbmail_db.c, check_dbmail_imapd.c, db.c, 
	  db.h, dbmailtypes.h, debug.c, debug.h, dm_imaputil.c, imap4.h, 
	  imapcommands.c, misc.c, modules/sortsieve.c, pipe.c, sort.c, sort.h, 
	  sql/mysql/create_tables.mysql, 
	  sql/mysql/migrate_from_2.0_to_2.1.mysql:
	re-merge aarons patch
	* db.h:
	minor typo
	* dsn.c:
	do not free statics
	* modules/sortsieve.c:
	use strstr instead of undefined g_strstr
	* dbmail-message.c:
	use GString in _header_cache
	* check_dbmail_imapd.c, db.c, dbmail-imapsession.c, dm_imaputil.c, 