@@ -1,3 +1,11 @@
+2006-07-30  Aaron Stone  <aaron@serendipity.cx>
+
+	* sql/mysql/create_tables.mysql, migrate_from_2.0_to_2.1.mysql:
+	Accepted patch from Maenaka to only create Sieve tables once, in
+	InnoDB format (closes bug #386).
+	* pipe.c:
+	Attempt to resolve bug #372.
+
 2006-07-27  Aaron Stone  <aaron@serendipity.cx>
 
 	* debug.c:
